--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,14 @@ h1 {
   text-align: center;
   color: #333;
 }
+.input {
+  width: 200px;
+  height: 30px;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 10px;
+  
+}
 
 button {
   display: block;
